# sundial-monorepo

./: .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  CONTRIBUTING.md  Makefile  NOTICE  README.md  aiken.toml  flake.nix  osv-scanner.toml  plutus.json  test.txt
offchain/: cabal.project  flake.nix  format.sh  fourmolu.yaml  midgard-offchain.cabal  package.json  pnpm-lock.yaml
offchain/midgard-node/: .env.example  .gitignore  Dockerfile  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
offchain/midgard-node/src/: config.ts  database.ts  index.ts  utils.ts
offchain/midgard-node/src/commands/: listen.ts  run.ts
offchain/midgard-node/src/database/: blocks.ts  confirmedLedger.ts  immutable.ts  latestLedger.ts  mempool.ts  mempoolLedger.ts  utils.ts
offchain/midgard-node/src/transactions/: utils.ts
offchain/midgard-node/src/transactions/state-queue/: commit-block-header.ts  merge-to-confirm-state.ts
offchain/midgard-node/src/transactions/state_queue/: merge-to-confirm-state.ts
offchain/midgard-node/test/: database.test.ts  listen.test.ts
offchain/midgard-sdk/: README.md  package.json  pnpm-lock.yaml
offchain/midgard-sdk/src/: index.ts
offchain/midgard-sdk/src/endpoints/: commit-block-header.ts
offchain/midgard-sdk/src/endpoints/hub-oracle/: fetch.ts
offchain/midgard-sdk/src/endpoints/state-queue/: fetch-confirmed-state-and-its-link.ts  fetch-confirmed-state.ts  fetch-latest-block.ts  merge-to-confirmed-state.ts
offchain/midgard-sdk/src/tx-builder/active-operators/: activate-operator.ts  list-state-transition.ts  remove-operator-slash-bond.ts  retire-operator.ts  update-commitment-time.ts
offchain/midgard-sdk/src/tx-builder/fraud-proof-catalogue/: deinit.ts  index.ts  new-fraud-category.ts  remove-fraud-category.ts
offchain/midgard-sdk/src/tx-builder/fraud-proof-computation-threads/: cancel.ts  success.ts
offchain/midgard-sdk/src/tx-builder/fraud-proof-tokens/: burn.ts  mint.ts
offchain/midgard-sdk/src/tx-builder/registered-operators/: activate-operator.ts  deregister-operator.ts  register-operator.ts  remove-deplicate-slash-bond.ts
offchain/midgard-sdk/src/tx-builder/retired-operators/: recover-operator-bond.ts  remove-operator-slash-bond.ts  retire-operator.ts
offchain/midgard-sdk/src/tx-builder/scheduler/: advance.ts  init.ts  rewind.ts
offchain/midgard-sdk/src/tx-builder/state-queue/: commit-block-header.ts  init.ts  merge-to-confirmed-state.ts
offchain/midgard-sdk/src/tx-builder/user-event-protocol/: l1-deposit.ts  l1-withdrawal-order.ts  l2-transaction-request.ts
offchain/midgard-sdk/src/types/: state-queue.ts
offchain/midgard-sdk/src/types/contract/: active-operators.ts  hub-oracle.ts  index.ts  (+3 more)
offchain/midgard-sdk/src/utils/: cml.ts  common.ts  helpers.ts  index.ts  ledger-state.ts  linked-list.ts  mpt.ts  state-queue.ts
offchain/midgard-tx-generator/: .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
offchain/midgard-tx-generator/src/: index.ts
offchain/midgard-tx-generator/src/core/: types.ts  utils.ts
offchain/midgard-tx-generator/src/generators/: index.ts  multi-output-transactions.ts  one-to-one-transactions.ts
offchain/midgard-tx-generator/src/tests/: multi-output-transactions.test.ts  one-to-one-transactions.test.ts  utils.ts
offchain/nix/: outputs.nix  project.nix  shell.nix
offchain/src/: index.ts
offchain/src/Midgard/: Constants.hs  ScriptUtils.hs  Scripts.hs
offchain/src/Midgard/Contracts/: ActiveOperators.hs  Init.hs  RegisteredOperators.hs  RetiredOperators.hs  Utils.hs
offchain/src/Midgard/Types/: ActiveOperators.hs  HubOracle.hs  LinkedList.hs  RegisteredOperators.hs  RetiredOperators.hs
offchain/src/core/: index.ts  types.ts
offchain/src/core/contract-types/: index.ts
offchain/src/endpoints/: index.ts
offchain/src/endpoints/active-operators/: activate-operator.ts  index.ts  init.ts  remove-operator-slash-bond.ts  retire-operator.ts
offchain/src/endpoints/fraud-proof-catalogue/: deinit.ts  new-fraud-category.ts  remove-fraud-category.ts
offchain/src/endpoints/fraud-proof-computation-threads/: cancel.ts  index.ts  success.ts
offchain/src/endpoints/fraud-proof-tokens/: burn.ts  index.ts  mint.ts
offchain/src/endpoints/registered-operators/: activate-operator.ts  deregister-operator.ts  index.ts  register-operator.ts  remove-deplicate-slash-bond.ts
offchain/src/endpoints/retired-operators/: index.ts  init.ts  recover-operator-bond.ts  remove-operator-slash-bond.ts  retire-operator.ts
offchain/src/endpoints/scheduler/: advance.ts  index.ts  rewind.ts
offchain/src/endpoints/state-queue/: commit-block-header.ts  deinit.ts  index.ts  init.ts  merge-to-confirmed-state.ts  remove-fraudulent-block-header.ts
offchain/src/endpoints/user-event-protocol/: index.ts  l1-deposit.ts  l1-transaction-order.ts  l1-withdrawal-order.ts  l2-transaction-request.ts
offchain/src/tx-builder/: index.ts
offchain/src/tx-builder/active-operators/: deinit.ts
offchain/src/tx-builder/retired-operators/: index.ts
offchain/src/tx-builder/user-event-protocol/: l1-transaction-order.ts
offchain/src/types/contract/: common.ts  ledger-state.ts
offchain/tests/: Spec.hs
offchain/tests/Spec/: Operators.hs  Types.hs  Utils.hs
onchain/plutarch/: .ghci  .gitignore  LICENSE  README.md  cabal.project  flake.nix  midgard-merkle.cabal
onchain/plutarch/app/: Main.hs
onchain/plutarch/nix/: project.nix  shell.nix
onchain/plutarch/src/: Profile.hs
onchain/plutarch/src/MerkleTree/: Helpers.hs  Merkling.hs
onchain/plutarch/src/Midgard/: Crypto.hs  List.hs  PlutusDataList.hs  Utils.hs
onchain/plutarch/src/Testing/: Crypto.hs  Eval.hs  MerklePatriciaForestry.hs  MidgardValidator.hs  Test.hs  TransactionProofs.hs
onchain/plutarch/src/Types/: Blocks.hs  Classes.hs  Constants.hs  Membership.hs  StateCommitment.hs
onchain/plutarch/src/Validators/: Membership.hs
onchain/plutarch/tests/: Test.hs
onchain/plutarch/tests/Testing/: Eval.hs  MembershipValidator.hs  MidgardValidator.hs  ScriptContextBuilder.hs  TransactionProofs.hs
(+800 files in other folders)
