cabal-version:      3.0
name:               midgard-merkle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             colll78
maintainer:         colll78@colll78

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wno-missing-import-lists
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -Wno-unused-packages -Wno-missing-local-signatures
    -Wno-implicit-prelude -fprint-explicit-foralls
    -fprint-explicit-kinds -Wunused-imports
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-operator-whitespace -Wno-unsafe
    -Wno-prepositive-qualified-module -Wno-partial-fields
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-all-missed-specializations -Wno-unused-packages

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoMonomorphismRestriction
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

common dependencies
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cborg
    , data-default
    , directory
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutarch-onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text

library
  import:          lang, dependencies
  exposed-modules:
    Profile
    Types.Blocks
    Types.Classes
    Types.Constants
    Types.Membership
    Types.StateCommitment
    Validators.Membership

  hs-source-dirs:  src

executable midgard
  import:         lang, dependencies
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:  midgard-merkle
  hs-source-dirs: app

-- executable test-midgard
--   import:         lang, dependencies
--   main-is:        Test.hs
--   other-modules:  Testing.Eval
--   hs-source-dirs: src, src/Testing
--   build-depends:  migdard-contracts

test-suite helpers-tests
  import:         lang, dependencies
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: tests
  other-modules:
    Testing.Crypto
    Testing.Eval
    Testing.MembershipValidator
    Testing.MerklePatriciaForestry
    Testing.ScriptContextBuilder
    Testing.TransactionProofs

  build-depends:
    , cardano-crypto-class
    , midgard-merkle
    , prettyprinter
    , tasty
    , tasty-hunit
    , tasty-quickcheck
